--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,6 +1,12 @@
 .sign-in {
-  width: 25vw;
+  width: 380px;
   display: flex;
   flex-direction: column;
-  margin: 10px 0;
+  .title {
+    margin: 10px 0;
+  }
+  .buttons {
+    display: flex;
+    justify-content: space-between;
+  }
 }
