--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -23,11 +23,20 @@
   }
 
   .quantity {
-    padding-left: 20px;
+    display: flex;
+    align-content: center;
+    .arrow {
+      cursor: pointer;
+    }
+    .value {
+      margin: 0px 10px;
+    }
   }
 
   .remove-button {
     padding-left: 12px;
     cursor: pointer;
+    font-size: 22px;
+    color: red;
   }
 }
